# guess-mime

./: .gitignore  .pylintrc  README.md  guess_mime.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: guess-mime.yml
guess_mime/: GuessMime.py  guess_mime.py  main.py
guess_mime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_guess_mime.py
